--- a/python-matter-aws-bridge/.vscode/launch.json
+++ b/python-matter-aws-bridge/.vscode/launch.json
@@ -12,6 +12,15 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "subProcess": true,
+        },
+        {
+            "name": "Test",
+            "type": "python",
+            "request": "launch",
+            "program": "test.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "subProcess": true,
         }
     ]
 }
