--- a/python-matter-aws-bridge/.env
+++ b/python-matter-aws-bridge/.env
@@ -1,5 +1,11 @@
-WS_HOST=144.64.7.51
-WS_PORT=9580
-AWS_ENDPOINT=a2qzw5m91hzbht-ats.iot.eu-west-3.amazonaws.com
-FGW_HOST=144.64.7.51
-FGW_PORT=9080
+WS_HOST2=144.64.7.51
+WS_PORT2=9580
+WS_HOST=192.168.12.204
+WS_PORT=5580
+AWS_IOT_ENDPOINT=a2qzw5m91hzbht-ats.iot.eu-west-3.amazonaws.com
+AWS_API_URL=https://9oro4aipol.execute-api.eu-west-3.amazonaws.com/Prod/home/onboard/claim
+AWS_TEMPLATE_NAME=MatterProvisioningTemplate
+FGW_HOST2=127.0.0.1
+FGW_PORT2=9080
+FGW_HOST=192.168.12.204
+FGW_PORT=80
