--- a/python-matter-aws-bridge/requirements.txt
+++ b/python-matter-aws-bridge/requirements.txt
@@ -2,9 +2,12 @@ aenum==3.1.15
 awscrt==0.19.1
 awsiotsdk==1.19.0
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.0
+cryptography==41.0.4
 dacite==1.8.1
 idna==3.4
+pycparser==2.21
 python-dotenv==1.0.0
 requests==2.31.0
 urllib3==2.0.6
